objects/project_cloud__Project_Sub_Task__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean value that determines whether a sub task has been completed or not</description>
        <inlineHelpText>When checked, indicates the Sub Task is Complete.</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>project_cloud__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Project Sub Tasks</relationshipLabel>
        <relationshipName>Project_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Position__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Sharing__c</fullName>
        <inlineHelpText>This is a system field and should never be visible.</inlineHelpText>
        <label>Project Sharing</label>
        <referenceTo>project_cloud__Project_Sharing__c</referenceTo>
        <relationshipLabel>Project Sub Tasks</relationshipLabel>
        <relationshipName>Project_Sub_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Project Task that the Project Sub Task belongs to</description>
        <inlineHelpText>The Project Task that the Project Sub Task belongs to</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipLabel>Project Sub Tasks</relationshipLabel>
        <relationshipName>Project_Sub_Tasks</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Short_Description__c</fullName>
        <description>A short description of the Sub Task</description>
        <inlineHelpText>A plain text area with a 255 character limit allows users to provide a description of the Sub Task.</inlineHelpText>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>project_cloud__Sub_Task_Number__c</fullName>
        <description>Auto Number field for uniquely identifying Project Sub Tasks.</description>
        <displayFormat>ST-{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>Auto number for the Project Sub Task.</inlineHelpText>
        <label>Project Sub Task Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Project Sub Task</label>
    <listViews>
        <fullName>project_cloud__All_Project_Tasks</fullName>
        <columns>NAME</columns>
        <columns>project_cloud__Sub_Task_Number__c</columns>
        <columns>project_cloud__IsComplete__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Sub Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Sub Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>